# game-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  lefthook.yml  main.py  pyproject.toml  qtable.json  run_multi_agent.sh
.github/: renovate.json
.github/workflows/: ci.yml  pr.yaml
.zed/: settings.json
lib/: bot_connection.py  connection_handler.py  constants.py  enemy.py  metrics.py  player_state.py  qtable.py  server_interface.py  utils.py
