[project]
name = "game-ai"
version = "0.1.0"
description = "todo"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "matplotlib>=3.10.8",
    "pickledb>=1.6",
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["ruff>=0.14.10", "ty>=0.0.8"]

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "NPY",      # Some numpy-specific things
    "B",        # flake8-bugbear - common bugs
    "ARG",      # flake8-unused-arguments
    "PIE",      # flake8-pie
    "A",        # flake8-builtins
    "FBT",      # flake8-boolean-trap
    "PERF",     # Performance-related rules
    "RUF",      # Ruff-specific rules
    "PL",       # pylint
]
ignore = [
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "RUF001",  # Allow greek letters in strings
]
